--- a/views/lobby.ejs
+++ b/views/lobby.ejs
@@ -15,7 +15,8 @@
 <body class="bg">
     <header>
         <!-- Notification -->
-        <div class="notification is-info is-top is-radiusless max-w trim-tb">
+        <div class="notification is-info is-top is-radiusless max-w
+                trim-tb">
             <button class="delete"></button>
             <p class="is-size-7-mobile has-text-weight-semibold"><i class="fa fa-info-circle"></i> <%= agreement %></p>
         </div>
@@ -23,25 +24,31 @@
         <!-- Center Box -->
         <div class="container is-fluid">
             <div class="box box-center is-large rounded">
-                <h1 class="title is-size-1-desktop is-size-4-mobile is-size-2-tablet has-text-centered"><%= title %>
+                <h1 class="title is-size-1-desktop is-size-4-mobile
+                            is-size-2-tablet has-text-centered"><%= title %>
                 </h1>
-                <h2 class="subtitle is-size-3-desktop is-size-5-mobile is-size-4-tablet has-text-centered res-width">
+                <h2 class="subtitle is-size-3-desktop
+                                is-size-5-mobile is-size-4-tablet
+                                has-text-centered res-width">
                     <%= subtitle %></h2>
 
                 <div class="columns has-text-centered">
                     <div class="column">
-                        <a href="#" class="button button-fill is-link is-outlined">
+                        <a href="#" class="button button-fill
+                                            is-link is-outlined">
                             <i class="fa fa-info"></i>
                             <p class="ml-4">More Info</p>
                         </a>
                     </div>
                     <div class="column">
-                        <a href="/console" class="button button-fill is-danger">
+                        <a href="/console" class="button
+                                            button-fill is-danger">
                             <p class="has-text-weight-medium" id="join">Join</p>
                         </a>
                     </div>
                     <div class="column">
-                        <a href="#" class="button button-fill is-dark is-outlined">
+                        <a href="#" class="button button-fill
+                                            is-dark is-outlined">
                             <i class="fa fa-code-branch"></i>
                             <p class="ml-4">View Project</p>
                         </a>
@@ -54,8 +61,9 @@
     <footer class="footer">
         <div class="content has-text-centered">
             <p>
-                <strong>ConsoleChat</strong> by <a href="https://github.com/SpleefDinamix" target="_blank">Spleef
-                    Dinamix</a>. The source code is
+                <strong>ConsoleChat</strong> by <a href="https://github.com/ptaushanov" target="_blank">ptaushanov</a>.
+                The source
+                code is
                 licensed
                 <a href="http://opensource.org/licenses/mit-license.php" target="_blank">MIT</a>. Created with
                 <a href="https://nodejs.org" target="_blank">Node.js</a>,
