--- a/views/console.ejs
+++ b/views/console.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/bulma.css">
     <link rel="stylesheet" type="text/css" href="css/console.css">
     <script defer src="js/fontawesome.js"></script>
@@ -25,7 +25,7 @@
     <body>
         <section class="section">
             <div class="message has-shadow">
-                <div class="message-header trim-tb has-text-weight-semibold">
+                <div class="message-header trim-tb has-text-weight-semibold dark-acrylic">
                     <p> CC:\users\requests\auth.exe</p>
                     <p>
                         <i class="fa fa-circle has-text-warning"></i>
@@ -33,7 +33,7 @@
                         <i class="fa fa-circle has-text-danger"></i>
                     </p>
                 </div>
-                <div class="message-body is-newblu">
+                <div class="message-body acrylic">
                     <div id="feedback">
                         <!-- Feedback -->
                     </div>
