--- a/public/css/console.css
+++ b/public/css/console.css
@@ -19,6 +19,7 @@ html {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
 }
 
 .trim-tb {
@@ -27,7 +28,7 @@ html {
 }
 
 .is-grey {
-    background-color: #1f1f29 !important;
+    background-color: rgb(31, 31, 41) !important;
 }
 
 .message {
@@ -45,8 +46,33 @@ html {
     -o-animation: transitionIn 0.75s;
 }
 
-.is-newblu {
-    background: rgba(16, 23, 37, 0.75) !important;
+.acrylic,
+.dark-acrylic {
+    box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.2);
+    position: relative;
+    background: inherit;
+    overflow: hidden;
+    z-index: 1;
+}
+
+.acrylic::before,
+.dark-acrylic::before {
+    content: "";
+    position: absolute;
+    background: inherit;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    box-shadow: inset 0 0 2000px rgba(2, 44, 128, 0.5);
+    filter: blur(10px);
+    margin: -20px;
+    z-index: -1;
+}
+
+.dark-acrylic::before {
+    box-shadow: inset 0 0 2000px rgba(40, 40, 53, 0.65);
+    filter: blur(30px);
 }
 
 .hero-body h6 {
