--- a/public/css/console.css
+++ b/public/css/console.css
@@ -55,8 +55,8 @@ html {
     z-index: 1;
 }
 
-.acrylic::before,
-.dark-acrylic::before {
+.acrylic::after,
+.dark-acrylic::after {
     content: "";
     position: absolute;
     background: inherit;
@@ -70,8 +70,8 @@ html {
     z-index: -1;
 }
 
-.dark-acrylic::before {
-    box-shadow: inset 0 0 2000px rgba(40, 40, 53, 0.65);
+.dark-acrylic::after {
+    box-shadow: inset 0 0 2000px rgba(71, 71, 87, 0.65);
     filter: blur(30px);
 }
 
