--- a/public/css/lobby.css
+++ b/public/css/lobby.css
@@ -1,8 +1,13 @@
-body, html {
+body,
+html {
     height: 100%;
 }
 
-h1, h3, h4, h5, h6 {
+h1,
+h3,
+h4,
+h5,
+h6 {
     font-family: "Ubuntu Mono", monospace;
 }
 
@@ -22,10 +27,10 @@ h1, h3, h4, h5, h6 {
 
     /* The image used */
     background-image: url("../assets/lobby/background.png");
-  
+
     /* Full height */
     height: 100%;
-  
+
     /* Center and scale the image nicely */
     background-position: center;
     background-repeat: no-repeat;
@@ -36,7 +41,7 @@ h1, h3, h4, h5, h6 {
     position: fixed;
     bottom: 0;
     width: 100%;
-    padding-top:1rem;
+    padding-top: 1rem;
     padding-bottom: 1rem;
     background-color: rgba(255, 255, 255, 0.87);
 }
@@ -56,13 +61,13 @@ h1, h3, h4, h5, h6 {
 }
 
 .is-top {
-   position: fixed;
-   top: 0;
-   z-index: 10;
+    position: fixed;
+    top: 0;
+    z-index: 10;
 }
 
 .max-w {
-    width:100%;
+    width: 100%;
 }
 
 .trim-tb {
@@ -82,7 +87,7 @@ h1, h3, h4, h5, h6 {
 
 @media screen and (max-width: 768px) {
     .column {
-        padding-top:0.3rem;
-        padding-bottom:0.3rem;
+        padding-top: 0.3rem;
+        padding-bottom: 0.3rem;
     }
 }
