Added join command

--- a/public/css/console.css
+++ b/public/css/console.css
@@ -144,7 +144,7 @@ html {
     font-family: "Roboto Mono", monospace;
     font-size: 11pt;
     font-weight: bold;
-    color: #ff9100;
+    color: #ffffff;
 }
 
 @media screen and (min-width: 1024px) {
